[package]
name = "day16"
version = "0.1.0"
authors = ["Christian Blades <cblades@pindrop.com>"]
edition = "2018"

[dependencies]
ndarray = "0.12"
nom = "4.1"
regex = "1.1"
chrono = "0.4"
tap = "0.3"
itertools = "0.7"
topological-sort = "0.1"
image = "0.20"
pathfinding = "1.1"
permutohedron = "0.2"
rayon = "1.0"